# insta360-luna-downloader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-windows.yml
docs/: protocol-notes.md
docs/superpowers/plans/: 2026-06-14-insta360-luna-downloader.md
docs/superpowers/specs/: 2026-06-14-insta360-luna-downloader-design.md
scripts/: build.ps1
src/luna_downloader/: __init__.py  downloader.py  luna_client.py  main.py  models.py  workers.py
src/luna_downloader/ui/: main_window.py
tests/: test_downloader.py  test_luna_client.py  test_ui_smoke.py  test_workers.py
