[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insta360-luna-downloader"
version = "0.1.2"
description = "Unofficial desktop downloader for Insta360 Luna Ultra local Wi-Fi media"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "PySide6>=6.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[project.scripts]
luna-downloader = "luna_downloader.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
